--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,35 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.animation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: #00000000;
+  overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section1 {
+  width: 100%;
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.section2 {
+  width: 100%;
+  height: 100vh;
 }
-
-.card {
-  padding: 2em;
+.section3 {
+  width: 100%;
+  height: 100vh;
 }
-
-.read-the-docs {
-  color: #888;
+.section4 {
+  width: 100%;
+  height: 100vh;
+}
+.section5 {
+  width: 100%;
+  height: 100vh;
 }
